--- a/BHDemo/Storyboards/DemoViews.storyboard
+++ b/BHDemo/Storyboards/DemoViews.storyboard
@@ -22,29 +22,59 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Xd-QA-A7Z">
-                                <rect key="frame" x="110" y="264" width="100" height="40"/>
+                                <rect key="frame" x="85" y="204" width="150" height="40"/>
                                 <color key="backgroundColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="e0W-Ba-PuW"/>
-                                    <constraint firstAttribute="width" constant="100" id="j7K-Ct-MyQ"/>
+                                    <constraint firstAttribute="width" constant="150" id="j7K-Ct-MyQ"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <state key="normal" title="Next"/>
                                 <connections>
                                     <action selector="nextButtonClicked:" destination="0JC-0i-9tl" eventType="touchUpInside" id="VQ9-UW-imU"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x4B-5G-EKx">
+                                <rect key="frame" x="85" y="264" width="150" height="40"/>
+                                <color key="backgroundColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="3Bk-wh-ZyC"/>
+                                    <constraint firstAttribute="width" constant="150" id="huS-ls-Nje"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <state key="normal" title="Add Observer"/>
+                                <connections>
+                                    <action selector="addObserverButtonClicked:" destination="0JC-0i-9tl" eventType="touchUpInside" id="ngO-hi-IkA"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bq9-HD-gGe">
+                                <rect key="frame" x="85" y="324" width="150" height="40"/>
+                                <color key="backgroundColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="6dm-jS-9rg"/>
+                                    <constraint firstAttribute="height" constant="40" id="jbc-Lk-4CO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <state key="normal" title="Remove Observer"/>
+                                <connections>
+                                    <action selector="removeObserverButtonClicked:" destination="0JC-0i-9tl" eventType="touchUpInside" id="hWv-lj-lU8"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.4756349325" green="0.47564673419999998" blue="0.47564041610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="3Xd-QA-A7Z" firstAttribute="centerY" secondItem="9Rz-cD-j8o" secondAttribute="centerY" id="Ghn-t0-X4q"/>
+                            <constraint firstItem="Bq9-HD-gGe" firstAttribute="centerX" secondItem="x4B-5G-EKx" secondAttribute="centerX" id="HdC-EM-877"/>
+                            <constraint firstItem="x4B-5G-EKx" firstAttribute="centerX" secondItem="3Xd-QA-A7Z" secondAttribute="centerX" id="MKw-HU-Tdy"/>
+                            <constraint firstItem="x4B-5G-EKx" firstAttribute="centerY" secondItem="9Rz-cD-j8o" secondAttribute="centerY" id="UEY-XR-W0O"/>
+                            <constraint firstItem="Bq9-HD-gGe" firstAttribute="top" secondItem="x4B-5G-EKx" secondAttribute="bottom" constant="20" id="ako-OA-A31"/>
+                            <constraint firstItem="x4B-5G-EKx" firstAttribute="top" secondItem="3Xd-QA-A7Z" secondAttribute="bottom" constant="20" id="prE-hc-Cfq"/>
                             <constraint firstItem="3Xd-QA-A7Z" firstAttribute="centerX" secondItem="9Rz-cD-j8o" secondAttribute="centerX" id="twR-bH-HRU"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ju5-Nh-dKJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-364" y="136"/>
+            <point key="canvasLocation" x="-365.625" y="135.21126760563379"/>
         </scene>
         <!--Second View-->
         <scene sceneID="XMs-zE-lVw">
@@ -59,22 +89,69 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WJI-7C-Cbg">
-                                <rect key="frame" x="110" y="264" width="100" height="40"/>
+                                <rect key="frame" x="85" y="194" width="150" height="40"/>
                                 <color key="backgroundColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="IEp-R4-6B3"/>
+                                    <constraint firstAttribute="width" constant="150" id="IEp-R4-6B3"/>
                                     <constraint firstAttribute="height" constant="40" id="w6x-4K-k2k"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <state key="normal" title="Next"/>
                                 <connections>
                                     <action selector="nextButtonClicked:" destination="FfT-Bc-DhW" eventType="touchUpInside" id="i0T-1U-Ct3"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OVb-7D-AsJ">
+                                <rect key="frame" x="85" y="264" width="150" height="40"/>
+                                <color key="backgroundColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="luj-Bb-yf9"/>
+                                    <constraint firstAttribute="height" constant="40" id="y8w-Ts-fgY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Push Notify">
+                                    <color key="titleColor" red="1" green="0.84705882349999995" blue="0.1019607843" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="pushNotifyButtonClicked:" destination="FfT-Bc-DhW" eventType="touchUpInside" id="YHp-g3-d64"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="juj-Nw-6K6">
+                                <rect key="frame" x="85" y="324" width="150" height="40"/>
+                                <color key="backgroundColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="K7O-HJ-4Nq"/>
+                                    <constraint firstAttribute="height" constant="40" id="SOz-rT-bzs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Add Observer"/>
+                                <connections>
+                                    <action selector="addObserverButtonClicked:" destination="FfT-Bc-DhW" eventType="touchUpInside" id="20n-fu-Boz"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TiU-67-84e">
+                                <rect key="frame" x="85" y="384" width="150" height="40"/>
+                                <color key="backgroundColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="5Qi-ZE-TuA"/>
+                                    <constraint firstAttribute="width" constant="150" id="YGy-Hp-wfN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Remove Observer"/>
+                                <connections>
+                                    <action selector="removeObserverButtonClicked:" destination="FfT-Bc-DhW" eventType="touchUpInside" id="bGW-sc-Qc6"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="WJI-7C-Cbg" firstAttribute="centerY" secondItem="e5g-a8-0iA" secondAttribute="centerY" id="d3S-Xn-HQB"/>
+                            <constraint firstItem="OVb-7D-AsJ" firstAttribute="top" secondItem="WJI-7C-Cbg" secondAttribute="bottom" constant="30" id="Ek4-kj-XVY"/>
+                            <constraint firstItem="TiU-67-84e" firstAttribute="centerX" secondItem="juj-Nw-6K6" secondAttribute="centerX" id="FlG-Oi-K2y"/>
+                            <constraint firstItem="juj-Nw-6K6" firstAttribute="centerX" secondItem="OVb-7D-AsJ" secondAttribute="centerX" id="KwZ-Jf-rjb"/>
+                            <constraint firstItem="OVb-7D-AsJ" firstAttribute="centerX" secondItem="WJI-7C-Cbg" secondAttribute="centerX" id="NEx-w0-8Ns"/>
+                            <constraint firstItem="juj-Nw-6K6" firstAttribute="top" secondItem="OVb-7D-AsJ" secondAttribute="bottom" constant="20" id="WkU-gg-1bm"/>
+                            <constraint firstItem="TiU-67-84e" firstAttribute="top" secondItem="juj-Nw-6K6" secondAttribute="bottom" constant="20" id="asz-UM-By3"/>
+                            <constraint firstItem="OVb-7D-AsJ" firstAttribute="centerY" secondItem="e5g-a8-0iA" secondAttribute="centerY" id="eiZ-pG-zpr"/>
                             <constraint firstItem="WJI-7C-Cbg" firstAttribute="centerX" secondItem="e5g-a8-0iA" secondAttribute="centerX" id="qGh-QW-mgf"/>
                         </constraints>
                     </view>
@@ -96,25 +173,42 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cgr-3Y-hBR">
-                                <rect key="frame" x="85" y="264" width="150" height="40"/>
+                                <rect key="frame" x="80.5" y="214" width="160" height="40"/>
                                 <color key="backgroundColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="5Ka-t0-ANe"/>
-                                    <constraint firstAttribute="width" constant="150" id="ENv-7w-NXj"/>
+                                    <constraint firstAttribute="width" constant="160" id="ENv-7w-NXj"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                                <state key="normal" title="Push Notify">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
+                                <state key="normal" title="Push First View Notify">
                                     <color key="titleColor" red="1" green="0.84705882349999995" blue="0.1019607843" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="pushNotifyButtonClicked:" destination="jCB-Kb-U9C" eventType="touchUpInside" id="hiC-kI-Ccd"/>
+                                    <action selector="postFistViewNotifyButtonClicked:" destination="jCB-Kb-U9C" eventType="touchUpInside" id="ssT-E3-13E"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0iE-2q-7FV">
+                                <rect key="frame" x="80.5" y="279" width="160" height="40"/>
+                                <color key="backgroundColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="JFO-YN-ZLB"/>
+                                    <constraint firstAttribute="width" constant="160" id="yPJ-CD-FkU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
+                                <state key="normal" title="Push Second View Notify">
+                                    <color key="titleColor" red="1" green="0.84705882349999995" blue="0.1019607843" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="postSecondNotifyViewButtonClicked:" destination="jCB-Kb-U9C" eventType="touchUpInside" id="PM0-Sp-mCI"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="0iE-2q-7FV" firstAttribute="centerX" secondItem="cgr-3Y-hBR" secondAttribute="centerX" id="4kE-9d-zyS"/>
                             <constraint firstItem="cgr-3Y-hBR" firstAttribute="centerX" secondItem="ZF4-ig-0Vr" secondAttribute="centerX" id="KMf-R7-27Z"/>
-                            <constraint firstItem="cgr-3Y-hBR" firstAttribute="centerY" secondItem="ZF4-ig-0Vr" secondAttribute="centerY" id="KkM-iO-v3L"/>
+                            <constraint firstItem="cgr-3Y-hBR" firstAttribute="centerY" secondItem="ZF4-ig-0Vr" secondAttribute="centerY" constant="-50" id="KkM-iO-v3L"/>
+                            <constraint firstItem="0iE-2q-7FV" firstAttribute="top" secondItem="cgr-3Y-hBR" secondAttribute="bottom" constant="25" id="XQO-84-1S1"/>
                         </constraints>
                     </view>
                 </viewController>
